[package]
name = "name-marketplace"
version = "0.2.0"
authors = ["Shane Vitarana <s@noreply.publicawesome.com>"]
edition = "2021"
repository = "https://github.com/public-awesome/names"
description = "Stargaze Name Marketplace Smart Contract"
license = "BUSL-1.1"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.4" }
cosmwasm-std = { version = "1.1.4" }
cosmwasm-storage = { version = "1.1.4" }
cw-storage-plus = "0.15.0"
cw2 = "0.15.0"
cw20 = "0.15.0"
cw721 = "0.15.0"
cw721-base = { version = "0.15.0", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
cw-utils = "0.15.0"
semver = "1"
sg-std = "0.19.0"
sg1 = "0.19.0"
sg-controllers = "0.19.1"

[dev-dependencies]
cw-multi-test = { version = "0.15.0" }
sg-multi-test = "0.19.0"
sg721-name = { path = "../sg721-name", features = ["library"] }
sg721 = "0.19.0"
