[package]
name = "name-minter"
authors = ["Shane Vitarana <s@noreply.publicawesome.com>"]
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
cw-storage-macro = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true, features = ["library"] }
name-marketplace = { path = "../marketplace", features = ["library"] }
schemars = { workspace = true }
serde = { workspace = true }
semver = { workspace = true }
sg-name = { path = "../../packages/sg-name" }
sg721 = { workspace = true }
sg721-name = { path = "../sg721-name", features = ["library"] }
sg-name-common = { path = "../../packages/sg-name-common" }
sg-name-minter = { path = "../../packages/sg-name-minter" }
sg-std = { workspace = true }
thiserror = { workspace = true }
whitelist-updatable-flatrate = { path = "../whitelist-updatable-flatrate", features = ["library"]}
whitelist-updatable = { path = "../whitelist-updatable", features = [
  "library",
] }

[dev-dependencies]
cw-multi-test = { workspace = true }
sg-multi-test = { workspace = true }
sg721-base = { workspace = true }
anyhow = "1"
