[package]
name = "sg721-name"
version = "0.2.0"
authors = [
  "Shane Vitarana <s@noreply.publicawesome.com>",
  "John Y <j@noreply.publicawesome.com>",
]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1.4"
cosmwasm-std = { version = "1.1.4" }
cw-storage-plus = "0.15.0"
cw-utils = "0.15.0"
cw2 = "0.15.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
sg-name = "0.5.0"
sg-std = "0.19.0"
sg721 = "0.19.0"
sg721-base = { version = "0.19.0", features = ["library"] }
thiserror = { version = "1.0.31" }
cw721 = "0.15.0"
cw721-base = { version = "0.15.0", features = ["library"] }
sg-name-market = "0.4.0"
