[package]
name = "sg721-name"
authors = [
  "Shane Vitarana <s@noreply.publicawesome.com>",
  "John Y <j@noreply.publicawesome.com>",
]
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
sg-name = { path = "../../packages/sg-name" }
sg-std = { workspace = true }
sg721 = { workspace = true }
sg721-base = {  workspace = true, features = ["library"] }
thiserror = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true, features = ["library"] }
sg-name-market = "0.6.0"
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
name-marketplace = { path = "../marketplace", features = ["library"] }
