[package]
name = "whitelist-updatable-flatrate"
authors = ["John Y <j@publicawesome.com>", "jason-c-child <child.jason@icloud.com>"]
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-controllers = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
sg-name-minter = { path = "../../packages/sg-name-minter" }
sg-std = { workspace = true }
sg-whitelist-basic = { path = "../../packages/sg-whitelist-basic" }
thiserror = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
name-minter = { path = "../name-minter", features = ["library"] }
sg-name = { path = "../../packages/sg-name" }
sg-multi-test = { workspace = true }
sg721-name = { path = "../sg721-name" }
