[package]
name = "whitelist-updatable"
version = "0.1.0"
authors = ["John Y <j@publicawesome.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = "1.1.4"
cosmwasm-std = { version = "1.1.4" }
cosmwasm-storage = "1.1.4"
cw-storage-plus = "0.15.1"
cw-controllers = "0.15.1"
cw2 = "0.15.1"
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
sg-whitelist-basic = { path = "../../packages/sg-whitelist-basic" }
name-minter = { path = "../name-minter", features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.15.1"
sg-std = "0.19.0"
sg-name = { path = "../../packages/sg-name" }
sg-multi-test = "0.19.0"
sg721-name = { path = "../sg721-name"}